--- a/data.ipynb
+++ b/data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "8628e736",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "a0561321",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "[63678 rows x 7 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "1e6111e5",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "a423dff4",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
        "street_number        699.0  1.049750e+03       1400.0  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "f6a0503e",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
        "[63678 rows x 7 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "9bd9e882",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "c17ce275",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
        "[72312 rows x 6 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "bcfab382",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "id": "963551f6",
    "metadata": {},
    "outputs": [
@@ -929,7 +929,7 @@
        "reviewer_id  9.950773e+07  2.468252e+08  6.675139e+08  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "3560a54c",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1117,7 @@
        "[72312 rows x 6 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "ded1ed54",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "id": "e82e8e75",
    "metadata": {},
    "outputs": [
@@ -1628,7 +1628,7 @@
        "[2757 rows x 75 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "id": "a7296b2b",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "id": "22163d39",
    "metadata": {},
    "outputs": [
@@ -2420,7 +2420,7 @@
        "reviews_per_month                             1.260000e+00  1.318000e+01  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2440,7 +2440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "id": "bc4c692d",
    "metadata": {},
    "outputs": [
@@ -2905,7 +2905,7 @@
        "[2757 rows x 75 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "id": "1afbe14f",
    "metadata": {},
    "outputs": [
@@ -2946,12 +2946,12 @@
    "id": "07c8af09",
    "metadata": {},
    "source": [
-    "Property types"
+    "### Property types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "id": "3567f224",
    "metadata": {},
    "outputs": [
@@ -2965,7 +2965,7 @@
        "Name: property_type, dtype: object"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2976,7 +2976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "id": "01a32392",
    "metadata": {},
    "outputs": [
@@ -3009,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "id": "655515fd",
    "metadata": {},
    "outputs": [
@@ -3033,6 +3033,292 @@
     "plt.xticks(rotation=45, ha='right')\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "445afc15",
+   "metadata": {},
+   "source": [
+    "### Prediction columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9c60e86b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numerical Columns Statistics\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>missing</th>\n",
+       "      <th>missing_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>accommodates</th>\n",
+       "      <td>2757.0</td>\n",
+       "      <td>2.642728</td>\n",
+       "      <td>1.503393</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bathrooms</th>\n",
+       "      <td>2067.0</td>\n",
+       "      <td>1.179245</td>\n",
+       "      <td>0.490885</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>690</td>\n",
+       "      <td>25.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bedrooms</th>\n",
+       "      <td>2550.0</td>\n",
+       "      <td>1.243137</td>\n",
+       "      <td>0.827455</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>207</td>\n",
+       "      <td>7.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>beds</th>\n",
+       "      <td>2063.0</td>\n",
+       "      <td>1.554048</td>\n",
+       "      <td>1.071572</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>694</td>\n",
+       "      <td>25.17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               count      mean       std  min  25%  50%  75%   max  missing  \\\n",
+       "accommodates  2757.0  2.642728  1.503393  1.0  2.0  2.0  4.0  15.0        0   \n",
+       "bathrooms     2067.0  1.179245  0.490885  0.0  1.0  1.0  1.0   6.5      690   \n",
+       "bedrooms      2550.0  1.243137  0.827455  0.0  1.0  1.0  1.0   9.0      207   \n",
+       "beds          2063.0  1.554048  1.071572  0.0  1.0  1.0  2.0  12.0      694   \n",
+       "\n",
+       "              missing_percent  \n",
+       "accommodates             0.00  \n",
+       "bathrooms               25.03  \n",
+       "bedrooms                 7.51  \n",
+       "beds                    25.17  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Categorical Columns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column</th>\n",
+       "      <th>Unique Values</th>\n",
+       "      <th>Missing Values</th>\n",
+       "      <th>Top 5 Values (count)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>property_type</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0 (0.0%)</td>\n",
+       "      <td>Entire rental unit (1666), Private room in rental unit (484), Entire condo (123), Room in hotel (81)...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>room_type</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0 (0.0%)</td>\n",
+       "      <td>Entire home/apt (1960), Private room (791), Shared room (4), Hotel room (2)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bathrooms_text</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1 (0.04%)</td>\n",
+       "      <td>1 bath (1626), 1 shared bath (310), 1.5 baths (235), 1 private bath (188), 2 baths (155)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>price</td>\n",
+       "      <td>304</td>\n",
+       "      <td>689 (24.99%)</td>\n",
+       "      <td>$115.00 (68), $150.00 (60), $100.00 (60), $120.00 (59), $80.00 (50)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>neighbourhood</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1705 (61.84%)</td>\n",
+       "      <td>Genève, Switzerland (657), Geneva, Switzerland (53), Genève, GE, Switzerland (40), Carouge, Genève, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>name</td>\n",
+       "      <td>2688</td>\n",
+       "      <td>0 (0.0%)</td>\n",
+       "      <td>Résidence Le Montbrillant (15), Double Business (10), Single Business (5), Single Standard (5), Appa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>description</td>\n",
+       "      <td>2413</td>\n",
+       "      <td>98 (3.55%)</td>\n",
+       "      <td>Make life easier at this peaceful, centrally located home. (18), The entire group will have easy acc...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Column  Unique Values Missing Values  \\\n",
+       "0   property_type             37       0 (0.0%)   \n",
+       "1       room_type              4       0 (0.0%)   \n",
+       "2  bathrooms_text             22      1 (0.04%)   \n",
+       "3           price            304   689 (24.99%)   \n",
+       "4   neighbourhood             78  1705 (61.84%)   \n",
+       "5            name           2688       0 (0.0%)   \n",
+       "6     description           2413     98 (3.55%)   \n",
+       "\n",
+       "                                                                                      Top 5 Values (count)  \n",
+       "0  Entire rental unit (1666), Private room in rental unit (484), Entire condo (123), Room in hotel (81)...  \n",
+       "1                              Entire home/apt (1960), Private room (791), Shared room (4), Hotel room (2)  \n",
+       "2                 1 bath (1626), 1 shared bath (310), 1.5 baths (235), 1 private bath (188), 2 baths (155)  \n",
+       "3                                      $115.00 (68), $150.00 (60), $100.00 (60), $120.00 (59), $80.00 (50)  \n",
+       "4  Genève, Switzerland (657), Geneva, Switzerland (53), Genève, GE, Switzerland (40), Carouge, Genève, ...  \n",
+       "5  Résidence Le Montbrillant (15), Double Business (10), Single Business (5), Single Standard (5), Appa...  \n",
+       "6  Make life easier at this peaceful, centrally located home. (18), The entire group will have easy acc...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "columns = ['property_type', 'room_type', 'accommodates', 'bathrooms',\n",
+    "                      'bathrooms_text', 'bedrooms', 'beds', 'price', 'neighbourhood',\n",
+    "                      'name', 'description']\n",
+    "numerical_cols = []\n",
+    "categorical_cols = []\n",
+    "\n",
+    "for col in columns:\n",
+    "    if col in listings.columns:\n",
+    "        if pd.api.types.is_numeric_dtype(listings[col]):\n",
+    "            numerical_cols.append(col)\n",
+    "        else:\n",
+    "            categorical_cols.append(col)\n",
+    "\n",
+    "if numerical_cols:\n",
+    "    print(\"Numerical Columns Statistics\")\n",
+    "    numerical_stats = listings[numerical_cols].describe().T\n",
+    "    numerical_stats['missing'] = listings[numerical_cols].isna().sum()\n",
+    "    numerical_stats['missing_percent'] = (listings[numerical_cols].isna().sum() / len(listings) * 100).round(2)\n",
+    "    display(numerical_stats)\n",
+    "\n",
+    "if categorical_cols:\n",
+    "    print(\"\\nCategorical Columns\")\n",
+    "    cat_info = []\n",
+    "\n",
+    "    for col in categorical_cols:\n",
+    "        unique_count = listings[col].nunique()\n",
+    "        missing_count = listings[col].isna().sum()\n",
+    "        missing_percent = (missing_count / len(listings) * 100).round(2)\n",
+    "\n",
+    "        value_counts = listings[col].value_counts().head(5)\n",
+    "        top_values = \", \".join([f\"{val} ({count})\" for val, count in value_counts.items()])\n",
+    "        if len(top_values) > 100:\n",
+    "            top_values = top_values[:100] + \"...\"\n",
+    "\n",
+    "        cat_info.append({\n",
+    "            'Column': col,\n",
+    "            'Unique Values': unique_count,\n",
+    "            'Missing Values': f\"{missing_count} ({missing_percent}%)\",\n",
+    "            'Top 5 Values (count)': top_values\n",
+    "        })\n",
+    "\n",
+    "    display(pd.DataFrame(cat_info))"
    ]
   }
  ],
