fix price stats

--- a/data.ipynb
+++ b/data.ipynb
@@ -3045,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "9c60e86b",
    "metadata": {},
    "outputs": [
@@ -3142,22 +3142,37 @@
        "      <td>694</td>\n",
        "      <td>25.17</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>price</th>\n",
+       "      <td>2068.0</td>\n",
+       "      <td>153.799323</td>\n",
+       "      <td>271.245144</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>9726.0</td>\n",
+       "      <td>689</td>\n",
+       "      <td>24.99</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               count      mean       std  min  25%  50%  75%   max  missing  \\\n",
-       "accommodates  2757.0  2.642728  1.503393  1.0  2.0  2.0  4.0  15.0        0   \n",
-       "bathrooms     2067.0  1.179245  0.490885  0.0  1.0  1.0  1.0   6.5      690   \n",
-       "bedrooms      2550.0  1.243137  0.827455  0.0  1.0  1.0  1.0   9.0      207   \n",
-       "beds          2063.0  1.554048  1.071572  0.0  1.0  1.0  2.0  12.0      694   \n",
+       "               count        mean         std   min   25%    50%    75%  \\\n",
+       "accommodates  2757.0    2.642728    1.503393   1.0   2.0    2.0    4.0   \n",
+       "bathrooms     2067.0    1.179245    0.490885   0.0   1.0    1.0    1.0   \n",
+       "bedrooms      2550.0    1.243137    0.827455   0.0   1.0    1.0    1.0   \n",
+       "beds          2063.0    1.554048    1.071572   0.0   1.0    1.0    2.0   \n",
+       "price         2068.0  153.799323  271.245144  18.0  85.0  115.0  162.0   \n",
        "\n",
-       "              missing_percent  \n",
-       "accommodates             0.00  \n",
-       "bathrooms               25.03  \n",
-       "bedrooms                 7.51  \n",
-       "beds                    25.17  "
+       "                 max  missing  missing_percent  \n",
+       "accommodates    15.0        0             0.00  \n",
+       "bathrooms        6.5      690            25.03  \n",
+       "bedrooms         9.0      207             7.51  \n",
+       "beds            12.0      694            25.17  \n",
+       "price         9726.0      689            24.99  "
       ]
      },
      "metadata": {},
@@ -3222,27 +3237,20 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>price</td>\n",
-       "      <td>304</td>\n",
-       "      <td>689 (24.99%)</td>\n",
-       "      <td>$115.00 (68), $150.00 (60), $100.00 (60), $120.00 (59), $80.00 (50)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>neighbourhood</td>\n",
        "      <td>78</td>\n",
        "      <td>1705 (61.84%)</td>\n",
        "      <td>Genève, Switzerland (657), Geneva, Switzerland (53), Genève, GE, Switzerland (40), Carouge, Genève, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>name</td>\n",
        "      <td>2688</td>\n",
        "      <td>0 (0.0%)</td>\n",
        "      <td>Résidence Le Montbrillant (15), Double Business (10), Single Business (5), Single Standard (5), Appa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>description</td>\n",
        "      <td>2413</td>\n",
        "      <td>98 (3.55%)</td>\n",
@@ -3257,19 +3265,17 @@
        "0   property_type             37       0 (0.0%)   \n",
        "1       room_type              4       0 (0.0%)   \n",
        "2  bathrooms_text             22      1 (0.04%)   \n",
-       "3           price            304   689 (24.99%)   \n",
-       "4   neighbourhood             78  1705 (61.84%)   \n",
-       "5            name           2688       0 (0.0%)   \n",
-       "6     description           2413     98 (3.55%)   \n",
+       "3   neighbourhood             78  1705 (61.84%)   \n",
+       "4            name           2688       0 (0.0%)   \n",
+       "5     description           2413     98 (3.55%)   \n",
        "\n",
        "                                                                                      Top 5 Values (count)  \n",
        "0  Entire rental unit (1666), Private room in rental unit (484), Entire condo (123), Room in hotel (81)...  \n",
        "1                              Entire home/apt (1960), Private room (791), Shared room (4), Hotel room (2)  \n",
        "2                 1 bath (1626), 1 shared bath (310), 1.5 baths (235), 1 private bath (188), 2 baths (155)  \n",
-       "3                                      $115.00 (68), $150.00 (60), $100.00 (60), $120.00 (59), $80.00 (50)  \n",
-       "4  Genève, Switzerland (657), Geneva, Switzerland (53), Genève, GE, Switzerland (40), Carouge, Genève, ...  \n",
-       "5  Résidence Le Montbrillant (15), Double Business (10), Single Business (5), Single Standard (5), Appa...  \n",
-       "6  Make life easier at this peaceful, centrally located home. (18), The entire group will have easy acc...  "
+       "3  Genève, Switzerland (657), Geneva, Switzerland (53), Genève, GE, Switzerland (40), Carouge, Genève, ...  \n",
+       "4  Résidence Le Montbrillant (15), Double Business (10), Single Business (5), Single Standard (5), Appa...  \n",
+       "5  Make life easier at this peaceful, centrally located home. (18), The entire group will have easy acc...  "
       ]
      },
      "metadata": {},
@@ -3277,18 +3283,13 @@
     }
    ],
    "source": [
-    "columns = ['property_type', 'room_type', 'accommodates', 'bathrooms',\n",
-    "                      'bathrooms_text', 'bedrooms', 'beds', 'price', 'neighbourhood',\n",
-    "                      'name', 'description']\n",
-    "numerical_cols = []\n",
-    "categorical_cols = []\n",
+    "numerical_cols = ['accommodates', 'bathrooms', 'bedrooms', 'beds', 'price']\n",
+    "categorical_cols = ['property_type', 'room_type', 'bathrooms_text', 'neighbourhood', 'name', 'description']\n",
     "\n",
-    "for col in columns:\n",
-    "    if col in listings.columns:\n",
-    "        if pd.api.types.is_numeric_dtype(listings[col]):\n",
-    "            numerical_cols.append(col)\n",
-    "        else:\n",
-    "            categorical_cols.append(col)\n",
+    "# Convert price from string with $ to numerical value\n",
+    "if 'price' in listings.columns and listings['price'].dtype == 'object':\n",
+    "    # Remove $ sign and other non-numeric characters, then convert to float\n",
+    "    listings['price'] = listings['price'].replace('[\\$,]', '', regex=True).astype(float)\n",
     "\n",
     "if numerical_cols:\n",
     "    print(\"Numerical Columns Statistics\")\n",
