update: project structure

--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -217,7 +217,7 @@
     }
    ],
    "source": [
-    "users = pd.read_csv(\"users/users.csv\")\n",
+    "users = pd.read_csv(\"../data/users.csv\")\n",
     "users"
    ]
   },
@@ -777,7 +777,7 @@
     }
    ],
    "source": [
-    "reviews = pd.read_csv(\"reviews/reviews.csv\")\n",
+    "reviews = pd.read_csv(\"../data/reviews.csv\")\n",
     "reviews"
    ]
   },
@@ -1634,7 +1634,7 @@
     }
    ],
    "source": [
-    "listings = pd.read_csv(\"listings/listings.csv\")\n",
+    "listings = pd.read_csv(\"../data/listings.csv\")\n",
     "listings"
    ]
   },
@@ -3045,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "9c60e86b",
    "metadata": {},
    "outputs": [
@@ -3219,42 +3219,42 @@
        "      <td>property_type</td>\n",
        "      <td>37</td>\n",
        "      <td>0 (0.0%)</td>\n",
-       "      <td>Entire rental unit (1666), Private room in rental unit (484), Entire condo (123), Room in hotel (81)...</td>\n",
+       "      <td>Entire rental unit (1666), Private room in ren...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>room_type</td>\n",
        "      <td>4</td>\n",
        "      <td>0 (0.0%)</td>\n",
-       "      <td>Entire home/apt (1960), Private room (791), Shared room (4), Hotel room (2)</td>\n",
+       "      <td>Entire home/apt (1960), Private room (791), Sh...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>bathrooms_text</td>\n",
        "      <td>22</td>\n",
        "      <td>1 (0.04%)</td>\n",
-       "      <td>1 bath (1626), 1 shared bath (310), 1.5 baths (235), 1 private bath (188), 2 baths (155)</td>\n",
+       "      <td>1 bath (1626), 1 shared bath (310), 1.5 baths ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>neighbourhood</td>\n",
        "      <td>78</td>\n",
        "      <td>1705 (61.84%)</td>\n",
-       "      <td>Genève, Switzerland (657), Geneva, Switzerland (53), Genève, GE, Switzerland (40), Carouge, Genève, ...</td>\n",
+       "      <td>Genève, Switzerland (657), Geneva, Switzerland...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>name</td>\n",
        "      <td>2688</td>\n",
        "      <td>0 (0.0%)</td>\n",
-       "      <td>Résidence Le Montbrillant (15), Double Business (10), Single Business (5), Single Standard (5), Appa...</td>\n",
+       "      <td>Résidence Le Montbrillant (15), Double Busines...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>description</td>\n",
        "      <td>2413</td>\n",
        "      <td>98 (3.55%)</td>\n",
-       "      <td>Make life easier at this peaceful, centrally located home. (18), The entire group will have easy acc...</td>\n",
+       "      <td>Make life easier at this peaceful, centrally l...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3269,13 +3269,13 @@
        "4            name           2688       0 (0.0%)   \n",
        "5     description           2413     98 (3.55%)   \n",
        "\n",
-       "                                                                                      Top 5 Values (count)  \n",
-       "0  Entire rental unit (1666), Private room in rental unit (484), Entire condo (123), Room in hotel (81)...  \n",
-       "1                              Entire home/apt (1960), Private room (791), Shared room (4), Hotel room (2)  \n",
-       "2                 1 bath (1626), 1 shared bath (310), 1.5 baths (235), 1 private bath (188), 2 baths (155)  \n",
-       "3  Genève, Switzerland (657), Geneva, Switzerland (53), Genève, GE, Switzerland (40), Carouge, Genève, ...  \n",
-       "4  Résidence Le Montbrillant (15), Double Business (10), Single Business (5), Single Standard (5), Appa...  \n",
-       "5  Make life easier at this peaceful, centrally located home. (18), The entire group will have easy acc...  "
+       "                                Top 5 Values (count)  \n",
+       "0  Entire rental unit (1666), Private room in ren...  \n",
+       "1  Entire home/apt (1960), Private room (791), Sh...  \n",
+       "2  1 bath (1626), 1 shared bath (310), 1.5 baths ...  \n",
+       "3  Genève, Switzerland (657), Geneva, Switzerland...  \n",
+       "4  Résidence Le Montbrillant (15), Double Busines...  \n",
+       "5  Make life easier at this peaceful, centrally l...  "
       ]
      },
      "metadata": {},
