--- a/notebooks/base_model.ipynb
+++ b/notebooks/base_model.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "24e62ead",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "from base_model import BaseModel\n",
+    "from nocarz.src.base_model import BaseModel\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -37,12 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "454ff79a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"listings/listings.csv\")\n",
+    "df = pd.read_csv(\"../data/listings.csv\")\n",
     "\n",
     "df = df[\n",
     "    [\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "bf63a730",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "22729c01",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "aa1d3a44",
    "metadata": {},
    "outputs": [
