add: model saving

--- a/notebooks/base_model.ipynb
+++ b/notebooks/base_model.ipynb
@@ -17,10 +17,12 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "from nocarz.src.base_model import BaseModel\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "from nocarz.src.base_model import BaseModel\n",
+    "from nocarz.config import DATA_DIR, MODELS_DIR\n",
     "\n",
     "\n",
     "NUMERICAL_COLUMNS = ['accommodates', 'bathrooms', 'bedrooms', 'beds', 'price']\n",
@@ -42,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/listings.csv\")\n",
+    "df = pd.read_csv(DATA_DIR / \"listings.csv\")\n",
     "\n",
     "df = df[\n",
     "    [\n",
@@ -64,6 +66,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7535c020",
+   "metadata": {},
+   "source": [
+    "### Training the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "280a6f09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_model = BaseModel(data=train_data)\n",
+    "base_model.save(MODELS_DIR / \"base_model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f3c2ec8a",
    "metadata": {},
    "source": [
@@ -72,12 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bf63a730",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_model = BaseModel(data=train_data)\n",
     "results = []\n",
     "\n",
     "for idx, row in test_data.iterrows():\n",
@@ -107,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "22729c01",
    "metadata": {},
    "outputs": [],
@@ -142,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "aa1d3a44",
    "metadata": {},
    "outputs": [
