--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -18,7 +18,9 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from nocarz.config import DATA_DIR"
    ]
   },
   {
@@ -217,7 +219,7 @@
     }
    ],
    "source": [
-    "users = pd.read_csv(\"../data/users.csv\")\n",
+    "users = pd.read_csv(DATA_DIR / \"users.csv\")\n",
     "users"
    ]
   },
@@ -777,7 +779,7 @@
     }
    ],
    "source": [
-    "reviews = pd.read_csv(\"../data/reviews.csv\")\n",
+    "reviews = pd.read_csv(DATA_DIR / \"reviews.csv\")\n",
     "reviews"
    ]
   },
@@ -1634,7 +1636,7 @@
     }
    ],
    "source": [
-    "listings = pd.read_csv(\"../data/listings.csv\")\n",
+    "listings = pd.read_csv(DATA_DIR / \"listings.csv\")\n",
     "listings"
    ]
   },
@@ -3045,7 +3047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9c60e86b",
    "metadata": {},
    "outputs": [
@@ -3286,9 +3288,7 @@
     "numerical_cols = ['accommodates', 'bathrooms', 'bedrooms', 'beds', 'price']\n",
     "categorical_cols = ['property_type', 'room_type', 'bathrooms_text', 'neighbourhood', 'name', 'description']\n",
     "\n",
-    "# Convert price from string with $ to numerical value\n",
     "if 'price' in listings.columns and listings['price'].dtype == 'object':\n",
-    "    # Remove $ sign and other non-numeric characters, then convert to float\n",
     "    listings['price'] = listings['price'].replace('[\\$,]', '', regex=True).astype(float)\n",
     "\n",
     "if numerical_cols:\n",
